# yooni

./: .dockerignore  .env  .env.example  .env.prod.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CLEANUP_SUMMARY.md  DB_REFACTORING_GUIDE.md  FRONTEND_MANAGEMENT_GUIDE.md  Makefile  PRODUCTION_UI_SUMMARY.md  README.md  README_AUTOMATION.md  TEST_GUIDE.md  UI_TEST_GUIDE.md  curl-format.txt  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml  fix_postgres_auth.sql  main.py  pyproject.toml  run_bi_system.sh  run_integration_tests.sh  run_tests.sh  setup.sh  supabase_test.py  test_automation.py  test_bi_dashboard.py
backend/: .coveragerc  .env.example  .flake8  Dockerfile  PROJECT_SUMMARY.md  README.md  build.py  check_db_schema.py  create_config_tables.py  create_products_table.py  db_partitioning_plan.md  dev_server.py  main.py  minimal_api.py  pytest.ini  quick_build_test.py  requirements.txt  scheduler.py  setup.py  simple_api.py  start_scheduler.py  start_workflow_api.sh  websocket_server.py  workflow_api_server.py
docs/: CI_CD_GUIDE.md  MONITORING_GUIDE.md  MULTI_ACCOUNT_GUIDE.md  SUPERCLAUDE_INTEGRATION_GUIDE.md  coupang_api_cancel_order_product.md  coupang_api_complete_long_term_undelivery.md  coupang_api_complete_shipment_on_return_request.md  coupang_api_get_ordersheet.md  coupang_api_get_ordersheet_by_orderid.md  coupang_api_get_ordersheet_history.md  coupang_api_ordersheets.md  coupang_api_ordersheets_by_time.md  coupang_api_stop_return_request_shipment.md  coupang_api_update_order_invoice.md  coupang_api_update_order_shipping_info.md  coupang_api_update_ordersheet_status.md  dropship-prd.md
frontend/: .eslintrc.json  Dockerfile  components.json  eslint.config.mjs  fix-routes.sh  jest.config.js  jest.setup.js  next.config.ts  package-lock.json  package.json  test-collection.ts
module/: CLAUDE.md
nginx/: nginx.conf
scripts/: backup.sh  deploy.sh  health_check.py  init.sql  install_redis.sh  monitor.sh  optimize_database.sql  quick-start.sh  rollback.sh  simple_monitor.sh  start_monitoring.sh  stop-local.sh  stop_monitoring.sh
supabase/: config.toml
workers/: base_worker.py  (+7 more)
(+548 files in other folders)
